IDEMPIERE-3798 Move iDempiere default branch to openjdk 10 / fix problem sending email -> javax.activation.UnsupportedDataTypeException: text/plain; charset=UTF-8 as reported in forum https://groups.google.com/d/msg/idempiere/At6xXFyEcGY/0zz-xbtfBAAJ