@@ -30,6 +30,10 @@ VMOPTS="-Dorg.osgi.framework.bootdelegation=sun.security.ssl,org.w3c.dom.events
 -Dmail.mime.encodefilename=true
 -Dmail.mime.decodefilename=true
 -Dmail.mime.encodeparameters=true
--Dmail.mime.decodeparameters=true"
+-Dmail.mime.decodeparameters=true
+--add-exports java.desktop/sun.awt=ALL-UNNAMED
+--add-exports java.sql.rowset/com.sun.rowset=ALL-UNNAMED
+--add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+--add-modules=ALL-SYSTEM"
 
 $JAVA ${DEBUG} $IDEMPIERE_JAVA_OPTIONS $VMOPTS -jar $BASE/plugins/org.eclipse.equinox.launcher_1.*.jar -application org.adempiere.server.application
